<resources>
    <string name="app_name"></string>

    <string name="myFinanceButton">My Finances</string>
    <string name="contactButton">Contact</string>
    <string name="infoButton">Information</string>
    <string name="locationButton">Location</string>
    <string name="quitButton">Quit</string>

    <string name="username">Username</string>
    <string name="loginButton">Log In</string>
    <string name="account">Account</string>

    <string name="quickTransaction">Quick Transaction</string>
    <string name="transactionList">List of Transactions</string>
    <string name="logout">Log Out</string>
    <string name="greeting">Hello</string>
    <string name="name">User</string>
    <string name="accountLabel">Account Number</string>
    <string name="accountNumber">0000000</string>
    <string name="balanceLabel">Current Balance</string>
    <string name="currentBalance">£0.00</string>

    <string name="transferAccountNumber">Account Number</string>
    <string name="transferAmount">Amount</string>
    <string name="sendButton">Send</string>
    <string name="cancelButton">Cancel</string>

    <string name="date">Date</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="amount">Amount</string>
    <string name="back">Back</string>

    <string name="statsButton">View statistics</string>
    <string name="progressViewLabel">Amount spend in</string>
    <string name="popularAccountLabel">Favourite Account</string>
    <string name="popularAccount">1001010</string>

    <string name="contactLabel">Contact Us</string>
    <string name="contactIntro">Very often you might find yourself wanting to find out more information about the services we provide. In order to help you with that we have provided multiple ways for you to get in touch with us. We are always happy to help you</string>
    <string name="subtitleOne">Call us</string>
    <string name="subtitleOneLabelOne">Call a member of our team at UK-based call centre.</string>
    <string name="numOneLabel">From UK</string>
    <string name="numOne">0345 720 3040</string>
    <string name="numTwoLabel">From abroad</string>
    <string name="numTwo">+44(0)113 242 1984</string>
    <string name="subtitleTwo">Come into branch</string>
    <string name="subtitleTwoLabelOne">You can also talk face to face with our representatives at our branch.</string>
    <string name="branchButton">Find branch</string>

    <string name="locationLabel">Find Our Branch</string>

    <string name="infoText1">Local bank at click of a button!</string>
    <string name="infoText2">moBank is a young, professional, commercial bank based in UK providing financial services at simple button press on your phone.</string>
    <string name="infoText3">We are fastest growing local company dedicated to keep our customers happy and ensure that services we provide are more efficient than our competitors.</string>
</resources>
