<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.k.bankapp.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="219dp"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_name" />

        <TextView
            android:id="@+id/informationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactLabel"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/infoIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/contactIntro"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/contactIntro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitleOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/subtitleOne"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitleOneLabelOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/subtitleOneLabelOne"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/subtitleOneLabelOne" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numOneLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/numOneLabel"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/numOneLabel" />

                <TextView
                    android:id="@+id/numOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/numOne"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/numOne" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numTwoLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/numTwoLabel"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/numTwoLabel" />

                <TextView
                    android:id="@+id/numTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/numTwo"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/numTwo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitleTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitleTwo"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">

                <TextView
                    android:id="@+id/subtitleTwoLabelOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtitleTwoLabelOne"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/subtitleTwoLabelOne" />

                <Button
                    android:id="@+id/branchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/branchButton"
                    android:textColor="@color/white"
                    tools:text="@string/branchButton" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/contactBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/back"
            android:textColor="@color/white"
            tools:text="@string/back" />
    </LinearLayout>
</RelativeLayout>
