<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.k.bankapp.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="219dp"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_name" />

        <TextView
            android:id="@+id/informationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/infoText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoText1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="30sp"
            android:layout_marginTop="0dp"
            android:textStyle="bold"
            tools:text="@string/infoText1" />

        <TextView
            android:id="@+id/infoText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/infoText2"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/infoText2" />

        <TextView
            android:id="@+id/infoText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoText3"
            android:textColor="@color/colorPrimaryLight"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/infoText3" />

        <TextView
            android:id="@+id/infoText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoText3"
            android:textColor="@color/colorPrimaryLight"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/infoText3" />

        <Button
            android:id="@+id/informationBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/back"
            android:textColor="@color/white"
            tools:text="@string/back" />
    </LinearLayout>
</RelativeLayout>
